# bl3_save_edit

./: .env  .gitignore  4114-out.txt  5-out.txt  Cargo.toml  FAST_TRAVEL.sqlite3  MISSION.sqlite3  Makefile  README.md  build.rs  licenses.txt  test_file_zak.sav
.github/workflows/: ci.yml  deploy.yml
bl3_save_edit_core/: Cargo.toml  build.rs
bl3_save_edit_core/game_data/: BALANCE_NAME_MAPPING.csv  BALANCE_TO_INV_KEY.csv  Convert JSON KV to CSV.txt  FAST_TRAVEL.csv  INVENTORY_PARTS_SHIELDS.csv  MISSION.csv  PROFILE_ECHO_THEMES.csv  PROFILE_ECHO_THEMES_DEFAULTS.csv  PROFILE_EMOTES.csv  PROFILE_EMOTES_DEFAULTS.csv  PROFILE_HEADS.csv  PROFILE_HEADS_DEFAULTS.csv  PROFILE_ROOM_DECORATIONS.csv  PROFILE_SKINS.csv  PROFILE_SKINS_DEFAULTS.csv  PROFILE_WEAPON_SKINS.csv  PROFILE_WEAPON_TRINKETS.csv  VEHICLE_CHASSIS_CYCLONE.csv  VEHICLE_CHASSIS_JETBEAST.csv  VEHICLE_CHASSIS_OUTRUNNER.csv  VEHICLE_CHASSIS_TECHNICAL.csv  VEHICLE_PARTS_CYCLONE.csv  VEHICLE_PARTS_JETBEAST.csv  VEHICLE_PARTS_OUTRUNNER.csv  VEHICLE_PARTS_TECHNICAL.csv  VEHICLE_SKINS_CYCLONE.csv  VEHICLE_SKINS_JETBEAST.csv  VEHICLE_SKINS_OUTRUNNER.csv  VEHICLE_SKINS_TECHNICAL.csv  WEAPON_PARTS_ARTIFACTS.csv  WEAPON_PARTS_CLASS_MODS.csv  WEAPON_PARTS_GRENADE_MODS.csv  WEAPON_PARTS_SHIELDS.csv  WEAPON_PARTS_WEAPONS.csv
bl3_save_edit_core/protobufs/: oak_profile.proto
bl3_save_edit_core/resources/: INVENTORY_PARTS_ALL.csv  INVENTORY_PARTS_ALL.csv.sz  INVENTORY_PARTS_ALL_CATEGORIZED.ron.sz  INVENTORY_PARTS_ARTIFACTS.csv  INVENTORY_PARTS_CLASS_MODS.csv  INVENTORY_PARTS_GRENADE_MODS.csv  INVENTORY_PARTS_INFO_ALL.csv  INVENTORY_PARTS_SHIELDS.csv  INVENTORY_PARTS_WEAPONS.csv  INVENTORY_SERIAL_DB.json  INVENTORY_SERIAL_DB.json.sz  INVENTORY_SERIAL_DB_PARTS_CATEGORIZED.ron.sz  LOOTLEMON_BL3_ITEMS.csv  Lootlemon_BL3_Items.csv  balance_name_mapping.json  balance_to_inv_key.json  inventory_serial_db.json
bl3_save_edit_core/src/: arbitrary_bits.rs  bl3_item.rs  error.rs  file_helper.rs  lib.rs  parser.rs  vehicle_data.rs
bl3_save_edit_core/src/bl3_profile/: guardian_reward.rs  mod.rs  profile_currency.rs  profile_data.rs  science_levels.rs  sdu.rs  skins.rs
bl3_save_edit_core/src/bl3_save/: ammo.rs  arbitrary_bits.rs  bl3_item.rs  bl3_serial.rs  challenge_data.rs  character_data.rs  fast_travel_unlock_data.rs  inventory_slot.rs  item.rs  level_data.rs  mod.rs  player_class.rs  playthrough.rs  sdu.rs  util.rs
bl3_save_edit_core/src/bl3_save/models/: mod.rs
bl3_save_edit_core/src/game_data/: mod.rs
bl3_save_edit_core/src/models/: inventory_serial_db.rs  mod.rs
bl3_save_edit_core/src/protos/: mod.rs  oak_profile.rs  oak_save.rs  oak_shared.rs
bl3_save_edit_core/src/resources/: mod.rs
bl3_save_edit_core/test_files/: 1.sav  1012.sav  19.sav  1ps4_v100.sav  310pc.sav  5.sav  profile.sav  quick.sav
bl3_save_edit_data/: bl3_save_edit.sqlite3
bl3_save_edit_ui/: Cargo.toml  build.rs
bl3_save_edit_ui/src/: bl3_ui.rs  bl3_ui_style.rs  config.rs  fonts.rs  main.rs  update.rs  util.rs
bl3_save_edit_ui/src/commands/: mod.rs
bl3_save_edit_ui/src/commands/initialization/: mod.rs
bl3_save_edit_ui/src/commands/interaction/: choose_save_directory.rs  file_save.rs  mod.rs  save.rs  settings.rs
bl3_save_edit_ui/src/commands/interaction/manage_save/: general.rs  item_editor.rs  mod.rs
bl3_save_edit_ui/src/interaction/: choose_save_directory.rs  mod.rs  save_file.rs
bl3_save_edit_ui/src/interaction/manage_save/: general.rs
bl3_save_edit_ui/src/resources/: fonts.rs  mod.rs  svgs.rs
bl3_save_edit_ui/src/state_mappers/: mod.rs
bl3_save_edit_ui/src/state_mappers/manage_profile/: bank.rs  general.rs  keys.rs  mod.rs  profile.rs
bl3_save_edit_ui/src/state_mappers/manage_save/: character.rs  currency.rs  fast_travel.rs  general.rs  inventory.rs  mod.rs  vehicle.rs
bl3_save_edit_ui/src/views/: choose_save_directory.rs  initialization.rs  loading.rs  mod.rs  save_selection_from_dir.rs  settings.rs  tab_bar_button.rs
bl3_save_edit_ui/src/views/item_editor/: available_parts.rs  current_parts.rs  delete_item_button_style.rs  editor.rs  extra_part_info.rs  item_button_style.rs  item_editor_list_item.rs  item_editor_lootlemon_item.rs  list_item_contents.rs  mod.rs  parts_tab_bar.rs
bl3_save_edit_ui/src/views/item_editor/parts/: available_parts.rs  current_parts.rs  mod.rs
bl3_save_edit_ui/src/views/manage_profile/: bank.rs  general.rs  keys.rs  main.rs  mod.rs
bl3_save_edit_ui/src/views/manage_profile/profile/: guardian_rewards.rs  mod.rs  sdu.rs  skin_unlocker.rs
bl3_save_edit_ui/src/views/manage_save/: character.rs  currency.rs  fast_travel.rs  general.rs  inventory.rs  main.rs  mod.rs
bl3_save_edit_ui/src/views/manage_save/character/: ammo.rs  gear.rs  mod.rs  sdu.rs  skins.rs
bl3_save_edit_ui/src/views/manage_save/inventory/: available_parts.rs  current_parts.rs  extra_part_info.rs  inventory_button_style.rs  inventory_category_style.rs  inventory_item.rs  inventory_item_editor.rs  mod.rs  parts_tab_bar.rs
bl3_save_edit_ui/src/views/manage_save/vehicle/: mod.rs  vehicle_unlocker.rs
bl3_save_edit_ui/src/widgets/: labelled_element.rs  mod.rs  notification.rs  number_input.rs  row_margin.rs  text_input_limited.rs  text_margin.rs
build_resources/linux/: bl3_save_editor.desktop
build_resources/windows/: res.rc
ci/: build.bash  test.bash
game_data/: MISSION.csv  PROFILE_EMOTES.csv  PROFILE_EMOTES_DEFAULTS.csv  PROFILE_HEADS.csv  PROFILE_HEADS_DEFAULTS.csv  PROFILE_SKINS_DEFAULTS.csv  PROFILE_WEAPON_SKINS.csv  VEHICLE_CHASSIS_CYCLONE.csv  VEHICLE_CHASSIS_JETBEAST.csv  VEHICLE_PARTS_CYCLONE.csv  VEHICLE_PARTS_TECHNICAL.csv  VEHICLE_SKINS_TECHNICAL.csv
migrations/: 20210621131354_gi_fast_travel.down.sql  20210621131354_gi_fast_travel.up.sql  20210621193413_gi_mission.down.sql  20210621193413_gi_mission.up.sql  20210622194438_gi_vehicle.down.sql  20210622194438_gi_vehicle.up.sql
protobufs/: oak_profile.proto  oak_save.proto  oak_shared.proto
src/: file_helper.rs  lib.rs  main.rs  parser.rs  util.rs  vehicle_data.rs
src/bl3_profile/: mod.rs  (+5 more)
test_files/: 1prof.sav  2profps4.sav  310ps4.sav  69ps4_v103.sav
(+23 files in other folders)
