[package]
name = "bl3_save_edit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
nom = "6.1"
protobuf = "2"
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
once_cell = "1.8"

[dependencies.strum]
version = "0.21"
features = ["derive"]

[dependencies.tokio]
features = ["rt-multi-thread", "rt", "macros"]
version = "1"

[dependencies.sqlx]
features = ["runtime-tokio-rustls", "sqlite", "offline"]
version = "0.5.5"

[build-dependencies]
protobuf-codegen-pure = "2.3"
