[package]
name = "bl3_save_edit_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
nom = "6.1"
protobuf = "2"
rayon = "1.5"
encoding_rs = "0.8"
byteorder = "1.4"
derivative = "2.2.0"

[dependencies.strum]
version = "0.21"
features = ["derive"]

[build-dependencies]
protobuf-codegen-pure = "2.3"
csv = "1.1"

[build-dependencies.serde]
version = "1"
features = ["derive"]
