[package]
name = "bl3_save_edit_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
nom = "6.1"
protobuf = "2"
rayon = "1.5"
encoding_rs = "0.8"
byteorder = "1.4"
derivative = "2.2.0"
crc32fast = "1.2"
bitvec = "0.20"
json = "0.12"
once_cell = "1.8"
csv = "1.1"
snap = "1"
base64 = "0.13"
ron = "0.6"
tracing = "0.1"
bitflags = "1.3"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.strum]
version = "0.21"
features = ["derive"]

[build-dependencies]
protobuf-codegen-pure = "2.3"
csv = "1.1"
snap = "1"
rayon = "1.5"
ron = "0.6"
json = "0.12"
heck = "0.3"

[build-dependencies.serde]
version = "1"
features = ["derive"]
