[package]
name = "bl3_save_edit_ui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bl3_save_edit_core = { path = "../bl3_save_edit_core" }
rusttype = "0.9"
dirs = "3.0"
rayon = "1.5"
tokio-rayon = "2.1"
futures = "0.3"
anyhow = "1.0"
derivative = "2.2.0"
heck = "0.3"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

# Version 0.5.5 is not working on MacOS for some reason but 0.4.4 works.
# Can't use 0.4.4 on Windows as default_dir not working hence diff versions
# for each platform should be used
[target.'cfg(not(target_os = "macos"))'.dependencies.native-dialog]
version = "0.5.5"
[target.'cfg(target_os = "macos")'.dependencies.native-dialog]
version = "0.4.4"

[dependencies.tokio]
version = "1"
features = ["fs", "rt-multi-thread", "rt"]

[dependencies.strum]
version = "0.21"
features = ["derive"]

[dependencies.iced]
git = "https://github.com/ZakisM/iced"
branch = "bl3_save_edit"
features = ["tokio", "svg"]

