[package]
name = "bl3_save_edit_ui"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bl3_save_edit_core = { path = "../bl3_save_edit_core" }
rusttype = "0.9"
dirs = "4.0"
rayon = "1.5"
tokio-rayon = "2.1"
futures = "0.3"
anyhow = "1.0"
derivative = "2.2.0"
heck = "0.4"
toml = "0.5"
chrono = "0.4"
open = "2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
serde_json = "1.0"
reqwest = "0.11"
version-compare = "0.1"
retry = "1.3"
pico-args = "0.4"
sanitize-filename = "0.3"
clipboard = "0.5"
image = "0.24"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

# Version 0.5.5 is not working on MacOS for some reason but 0.4.4 works.
# Can't use 0.4.4 on Windows as default_dir not working hence diff versions
# for each platform should be used
[target.'cfg(not(target_os = "macos"))'.dependencies.native-dialog]
version = "0.5.5"
[target.'cfg(target_os = "macos")'.dependencies.native-dialog]
version = "0.4.4"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tar = "0.4"
flate2 = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "0.6"

[dependencies.tokio]
version = "1"
features = ["io-util", "fs", "rt-multi-thread", "rt"]

[dependencies.strum]
version = "0.24"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.iced]
git = "https://github.com/ZakisM/iced"
branch = "bl3_save_edit"
features = ["tokio", "svg"]

[build-dependencies]
embed-resource = "1.7"
